# qecc

./: .gitignore  MANIFEST.in  README.md  belief propagation and ordered statistics.md  beliefPropagationAndOsd.ipynb  bposd.md  funWithMatrices.py  linearAlgebra.ipynb  memBP.py  minSum.py  minSumExample.ipynb  orderedStatisticsDecoding.ipynb  polynomialCodes.py  pyproject.toml  quantumCompilation.ipynb  relaybp.md  requirements.txt  setup.py  testFuncWithMatrices.py  testMemBP.py
.github/workflows/: OSD.yml  compatability.yaml  memBPtests.yaml  python-app.yml  python-package.yml  python-publish.yml
codeMatrices/: nearEarthParity.txt
notebooks/: 0 startHere.md  1 linearCodesOverF2.ipynb  2 orderedStatisticsDecoding.ipynb  3 minSumDecoding.ipynb  3 minSumExample.ipynb  4 beliefPropagationAndOsd.ipynb  4 quaternaryBeliefPropagationAndOsd.ipynb  5 Fault tolerant quantum computing.ipynb  Stabilizer LDPC codes.ipynb  beliefPropagationAndOsd.ipynb  linearAlgebra.ipynb  minSumExample.ipynb  orderedStatisticsDecoding.ipynb  quantumCompilation.ipynb  relaybp.md  startHere.md
qecc/: __init__.py  funWithMatrices.py  minSum.py  polynomialCodes.py
qecc/tests/: testFuncWithMatrices.py  testMemBP.py
src/qecc/: __init__.py  bicycleBivariateCodeEnvironment.py  funWithMatrices.py  gf4.py  logicals.py  minSum.py  monteCarloSimulation.py  osd.py  polynomialCodes.py  qbp.py  utils.py
tests/: testFunWithMatrices.py  testLogicals.py  testMemBP.py  testOsd.py
